--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
 
+<html> 
+
+<head> 
+<title> Civilian Personnel Section Weekly Job Listings </title>
+</head>
+
+<body> 
+  <title> 14 August Weekly VA </title>
+  <ul>
+    <li>P-25-560-32 Property Dispo Clk, DLA, BWT 1-4 (t 1-5) (All MLC-IHA-MC Emp in Oki)</li>
+    <li>P-25-590-32 Purchasing & Contract Spec-BWT-1-6, PKC (All MLC-IHA-MC Emp in Oki)</li>
+    <li> P-25-596-30 (Amended) Child Dev Prog Tech, 18 FSS-FSYCN, BWT 1-4 (18 FSS-FSY Emp Only)</li>
+  </ul> 
+</body>
+</html> 
