--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
 <body> 
   <title> 14 August Weekly VA </title>
+
+  <h1> 14 August Weekly VA </h1>
   <ul>
     <li>P-25-560-32 Property Dispo Clk, DLA, BWT 1-4 (t 1-5) (All MLC-IHA-MC Emp in Oki)</li>
     <li>P-25-590-32 Purchasing & Contract Spec-BWT-1-6, PKC (All MLC-IHA-MC Emp in Oki)</li>
