--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 <body> 
   <title> 14 August Weekly VA </title>
 
-  <h1> 14 August Weekly VA </h1>
+  <h3> 14 August Weekly VA </h3>
   <ul>
+    <li> <a href="https://www.w3schools.com/">Visit W3Schools.com!</a></li>
+    <li> <a href="my-document.pdf" target="_blank">Download PDF</a> </li>
     <li>P-25-560-32 Property Dispo Clk, DLA, BWT 1-4 (t 1-5) (All MLC-IHA-MC Emp in Oki)</li>
     <li>P-25-590-32 Purchasing & Contract Spec-BWT-1-6, PKC (All MLC-IHA-MC Emp in Oki)</li>
     <li> P-25-596-30 (Amended) Child Dev Prog Tech, 18 FSS-FSYCN, BWT 1-4 (18 FSS-FSY Emp Only)</li>
