--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
   <h3> 14 August Weekly VA </h3>
   <ul>
     <li> <a href="P-25-560-32 Property Dispo Clk- DLA- BWT 1-4 (t 1-5) (All MLC-IHA-MC Emp in Oki).pdf" target="_blank">P-25-560-32 Property Dispo Clk, DLA, BWT 1-4 (t 1-5) (All MLC-IHA-MC Emp in Oki)</a> <li> 
+    <li> <a href="" target="_blank">P-25-590-32 Purchasing & Contract Spec-BWT-1-6, PKC (All MLC-IHA-MC Emp in Oki)</a> <li> 
+    <li> <a href="P-25-596-30 (Amended) Child Dev Prog Tech- 18 FSS-FSYCN- BWT 1-4 (18 FSS-FSY Emp Only).pdf" target="_blank">P-25-596-30 (Amended) Child Dev Prog Tech, 18 FSS-FSYCN, BWT 1-4 (18 FSS-FSY Emp Only)</a> <li> 
+    <li> <a href="P-25-597-30 (Amended) Child Dev Prog Tech- 18 FSS-FSYCW- BWT 1-4 (18 FSS-FSY Emp Only).pdf" target="_blank">P-25-597-30 (Amended) Child Dev Prog Tech, 18 FSS-FSYCW, BWT 1-4 (18 FSS-FSY Emp Only)</a> <li> 
+    <li> <a href="P-25-608-32 Maintenance Worker- 718 FSS- BWT 2-5 (Base-Wide only).pdf" target="_blank">P-25-608-32 Maintenance Worker, 718 FSS, BWT 2-5 (Base-wide)</a> <li> 
+    <li> <a href="P-25-622-32 Guard- 18 SFS- BWT 3-1 (18 SFS Emp Only) (1).pdf" target="_blank">P-25-622-32 Guard, 18 SFS, BWT 3-1 (18 SFS Emp Only)</a> <li> 
+    <li> <a href="P-25-626-32 Sales Checker- BWT-1-3 (LTE) DeCA FOS  (All MLC-IHA-MC Emp in Oki).pdf" target="_blank">P-25-626-32 Sales Checker, BWT-1-3, LTE, DeCA FOS  (All MLC-IHA-MC Emp in Oki)</a> <li> 
+    <li> <a href="Vacancy Announcements Currently Open as of 13 Aug 2025.pdf" target="_blank">14 August Weekly VA Postings </a> <li> 
 
-    <li>P-25-560-32 Property Dispo Clk, DLA, BWT 1-4 (t 1-5) (All MLC-IHA-MC Emp in Oki)</li>
-    <li>P-25-590-32 Purchasing & Contract Spec-BWT-1-6, PKC (All MLC-IHA-MC Emp in Oki)</li>
-    <li> P-25-596-30 (Amended) Child Dev Prog Tech, 18 FSS-FSYCN, BWT 1-4 (18 FSS-FSY Emp Only)</li>
   </ul> 
 </body>
 </html> 
