--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     <li> <a href="Vacancy Announcements Currently Open as of 13 Aug 2025.pdf" target="_blank">14 August Weekly VA Postings </a> <li> 
 
     <p> 
-    <li><a href="" target="_blank">P-25-591-31 Fabric & Leather Worker, 718 CES, BWT2-6 (All MLC-IHA-MC Emp in Oki)</a></li>
-    <li><a href="" target="_blank">P-25-599-31 Commissary Worker, DeCA (COU), BWT 2-3 (All MLC-IHA-MC Emp in Oki)</a></li>
-    <li><a href="" target="_blank">P-25-605-31 Engineering Draftsman, 18CES, BWT 1-4 (CEO Only)</a></li>
-    <li><a href="" target="_blank">P-25-609-31 Budget Tech, 18 CPTS FMA, BWT 1-5 (All MLC-IHA-MC Emp in Oki)</a></li>
-    <li><a href="" target="_blank">P-25-612-31 Administrative Specialist, 718CES, BWT1-4 (LTE) (All MLC-IHA-MC Emp in Oki)</a></li>
-    <li><a href="" target="_blank">P-25-615-31 Comsry Wkr-Forklift Opr, DeCA-KIN, BWT 2-4 (DeCA-Kinser Comsry Emp Only)</a></li>
+    <li><a href="P-25-591-31 Fabric & Leather Worker- 718 CES- BWT2-6 (All MLC-IHA-MC Emp in Oki).pdf" target="_blank">P-25-591-31 Fabric & Leather Worker, 718 CES, BWT2-6 (All MLC-IHA-MC Emp in Oki)</a></li>
+    <li><a href="P-25-599-31 Commissary Worker- DeCA-COU- BWT 2-3 (All MLC-IHA-MC Emp in Oki).pdf" target="_blank">P-25-599-31 Commissary Worker, DeCA (COU), BWT 2-3 (All MLC-IHA-MC Emp in Oki)</a></li>
+    <li><a href="P-25-605-31 Engineering Draftsman- 18CES- BWT 1-4 (18 CES-CEO Emp Only).pdf" target="_blank">P-25-605-31 Engineering Draftsman, 18CES, BWT 1-4 (CEO Only)</a></li>
+    <li><a href="P-25-609-31 Budget Technician- 18 CPTS FMA- BWT 1-5 (All MLC-IHA-MC Emp in Oki).pdf" target="_blank">P-25-609-31 Budget Tech, 18 CPTS FMA, BWT 1-5 (All MLC-IHA-MC Emp in Oki)</a></li>
+    <li><a href="P-25-612-31 Administrative Specialist- 718CES- BWT1-4 (LTE) (All MLC-IHA-MC Emp in Oki).pdf" target="_blank">P-25-612-31 Administrative Specialist, 718CES, BWT1-4 (LTE) (All MLC-IHA-MC Emp in Oki)</a></li>
+    <li><a href="P-25-615-31 Comsry Wkr-Forklift Opr- DeCA-KIN- BWT 2-4 (DeCA-Kinser Comsry Emp Only).pdf" target="_blank">P-25-615-31 Comsry Wkr-Forklift Opr, DeCA-KIN, BWT 2-4 (DeCA-Kinser Comsry Emp Only)</a></li>
     </p>
 
 
