--- a/index.html
+++ b/index.html
@@ -27,8 +27,17 @@
     <li><a href="P-25-612-31 Administrative Specialist- 718CES- BWT1-4 (LTE) (All MLC-IHA-MC Emp in Oki).pdf" target="_blank">P-25-612-31 Administrative Specialist, 718CES, BWT1-4 (LTE) (All MLC-IHA-MC Emp in Oki)</a></li>
     <li><a href="P-25-615-31 Comsry Wkr-Forklift Opr- DeCA-KIN- BWT 2-4 (DeCA-Kinser Comsry Emp Only).pdf" target="_blank">P-25-615-31 Comsry Wkr-Forklift Opr, DeCA-KIN, BWT 2-4 (DeCA-Kinser Comsry Emp Only)</a></li>
     </p>
-
-
   </ul> 
+
+      <p> 
+        <h3> Japan Wide </h3>
+        <ul> 
+        <li> <a href="" target="_blank">JA-23-480 Revised - Boiler Plant Operator Foreman A, 718 FSS-FSVA, BWT 2-7</a> <li> 
+        <li> <a href="JA-24-686 Equipment Specialist- 718 FSS-FSVA- BWT 1-6.pdf.pdf" target="_blank">JA-24-686 Revised - Equipment Specialist, 718 FSS, BWT 1-6</a> <li> 
+        </ul> 
+      </p>
+
+
+  
 </body>
 </html> 
