--- a/index.html
+++ b/index.html
@@ -43,18 +43,18 @@
         <li><a href="" target="_blank">OC-24-954 Cook Foreman A, 718 FSS, BWT 2-6</a></li> 
         <li><a href="" target="_blank">OC-25-208 Safety Tech, 18WG-SE, BWT-1-5</a></li> 
         <li><a href="" target="_blank">OC-25-236 Counter Attendant, 718 FSS, BWT 2-3 (LTE)</a></li> 
-        <li><a href="" target="_blank">OC-25-250 IT Assist (Cus-Net), 718 FSS, BWT 1-5 LTE 2Yrs</a></li> 
-        <li><a href="" target="_blank">OC-25-325 Sales Checker, DeCA, Foster Commissary, BWT 1-3 (LTE)</a></li> 
-        <li><a href="" target="_blank">OC-25-351 Engineer (Arch), 718 CES, BWT 1-5 T1-7 (Developmental Position)</a></li> 
-        <li><a href="" target="_blank">OC-25-352 Engineer (Mech), 718 CES, BWT 1-5 T1-7 (Developmental Position)</a></li> 
-        <li><a href="" target="_blank">OC-CE-OH-1-24 PM Wkr-Hlp, 718 CES, BWT 2-4 (LTE)</a></li> 
-        <li><a href="" target="_blank">OC-CE-OH-2-24 OA Clerk, 718 CES, BWT 1-3 (LTE)</a></li> 
-        <li><a href="" target="_blank">OC-CE-OH-5-24 Admin Spec, 718 CES, BWT1-4 (LTE)</a></li> 
-        <li><a href="" target="_blank">OC-CE-OH-6-24 Stock Control Clk, 718 CES, BWT 1-3 (LTE)</a></li> 
-        <li><a href="" target="_blank">OC-CE-OH-7-24 Husg Clk, 718 CES, BWT 1-4 (LTE)</a></li> 
+        <li><a href="OC-25-250 IT Assist (Cus-Net)- 718 FSS- BWT 1-5 LTE 2Yrs.pdf" target="_blank">OC-25-250 IT Assist (Cus-Net), 718 FSS, BWT 1-5 LTE 2Yrs</a></li> 
+        <li><a href="P-25-626-32 Sales Checker- BWT-1-3 (LTE) DeCA FOS  (All MLC-IHA-MC Emp in Oki).pdf" target="_blank">OC-25-325 Sales Checker, DeCA, Foster Commissary, BWT 1-3 (LTE)</a></li> 
+        <li><a href="OC-25-351 Engineer (Arch)- 718 CES- BWT 1-5 T1-7 (Developmental Position).pdf" target="_blank">OC-25-351 Engineer (Arch), 718 CES, BWT 1-5 T1-7 (Developmental Position)</a></li> 
+        <li><a href="OC-25-352 Engineer (Mech)- 718 CES- BWT 1-5 T1-7 (Developmental Position) (1).pdf" target="_blank">OC-25-352 Engineer (Mech), 718 CES, BWT 1-5 T1-7 (Developmental Position)</a></li> 
+        <li><a href="OC-CE-OH-1-24 PM Wkr-Hlp- 718 CES- BWT 2-4 (LTE) (1).pdf" target="_blank">OC-CE-OH-1-24 PM Wkr-Hlp, 718 CES, BWT 2-4 (LTE)</a></li> 
+        <li><a href="OC-CE-OH-2-24 OA Clerk- 718 CES- BWT 1-3 (LTE).pdf" target="_blank">OC-CE-OH-2-24 OA Clerk, 718 CES, BWT 1-3 (LTE)</a></li> 
+        <li><a href="OC-CE-OH-5-24 Admin Spec- 718 CES- BWT1-4 (LTE).pdf target="_blank">OC-CE-OH-5-24 Admin Spec, 718 CES, BWT1-4 (LTE)</a></li> 
+        <li><a href="OC-CE-OH-6-24 Stock Control Clk- 718 CES- BWT 1-3 (LTE) (1).pdf" target="_blank">OC-CE-OH-6-24 Stock Control Clk, 718 CES, BWT 1-3 (LTE)</a></li> 
+        <li><a href="OC-CE-OH-7-24 Husg Clk- 718 CES- BWT 1-4 (LTE).pdf" target="_blank">OC-CE-OH-7-24 Husg Clk, 718 CES, BWT 1-4 (LTE)</a></li> 
         <li><a href="" target="_blank">OC-CE-OH-7C-24 Husg Clk, 718 CES, BWT 1-4 (LTE)</a></li> 
-        <li><a href="" target="_blank">OC-CE-OH-7F-24 Husg Clk, 718 CES, BWT 1-4 (LTE)</a></li> 
-        <li><a href="" target="_blank">OC-25-366-Revised Engineer (AS), 718 CES, BWT 1-5 T1-7 (Developmental Position)</a></li> 
+        <li><a href="OC-CE-OH-7F-24 Husg Clk- 718 CES- BWT 1-4 (LTE).pdf" target="_blank">OC-CE-OH-7F-24 Husg Clk, 718 CES, BWT 1-4 (LTE)</a></li> 
+        <li><a href="OC-25-366-Revised Engineer (AS)- 718 CES- BWT 1-5 T1-7 (Developmental Position).pdf" target="_blank">OC-25-366-Revised Engineer (AS), 718 CES, BWT 1-5 T1-7 (Developmental Position)</a></li> 
         </ul> 
       </p>
   
