--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         <h3> Open Continuously </h3>
         <ul> 
         <li><a href="OC-23-480 Revised - Boiler Plant Operator FA- FSVA BWT 2-7.pdf" target="_blank">OC-23-480 Revised - Boiler Plant Operator FA, FSVA BWT 2-7</a></li> 
-        <li><a href="" target="_blank">OC-24-651 Refrigeration and Air-Conditioning Mech FA, 718 CES-CELS3, BWT 2-8</a></li> 
-        <li><a href="" target="_blank">OC-24-686 Revised - Equipment Specialist, 718 FSS, BWT 1-6</a></li> 
-        <li><a href="" target="_blank">OC-24-954 Cook Foreman A, 718 FSS, BWT 2-6</a></li> 
+        <li><a href="OC-24-651 Refrigeration and Air-Conditioning Mech FA- 718 CES-CELS3- BWT 2-8 (1).pdf" target="_blank">OC-24-651 Refrigeration and Air-Conditioning Mech FA, 718 CES-CELS3, BWT 2-8</a></li> 
+        <li><a href="JA-24-686 Equipment Specialist- 718 FSS-FSVA- BWT 1-6.pdf.pdf" target="_blank">OC-24-686 Revised - Equipment Specialist, 718 FSS, BWT 1-6</a></li> 
+        <li><a href="OC-24-954 Cook Foreman A- 718 FSS- BWT 2-6.pdf" target="_blank">OC-24-954 Cook Foreman A, 718 FSS, BWT 2-6</a></li> 
         <li><a href="OC-25-208 Safety Tech- 18WG-SE- BWT-1-5.pdf" target="_blank">OC-25-208 Safety Tech, 18WG-SE, BWT-1-5</a></li> 
         <li><a href="OC-25-236 Counter Attendant- 718 FSS- BWT 2-3 (LTE).pdf" target="_blank">OC-25-236 Counter Attendant, 718 FSS, BWT 2-3 (LTE)</a></li> 
         <li><a href="OC-25-250 IT Assist (Cus-Net)- 718 FSS- BWT 1-5 LTE 2Yrs.pdf" target="_blank">OC-25-250 IT Assist (Cus-Net), 718 FSS, BWT 1-5 LTE 2Yrs</a></li> 
