--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head> 
 <title> Civilian Personnel Section Weekly Job Listings </title>
   <h1> Civilian Personnel Section Weekly Job Listings </h1>
+      <link rel="stylesheet" href="styles.css"> 
+
 </head>
 
 <body> 
