--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 
 <body> 
   <title> 14 August Weekly VA </title>
-  <p> <h3>This temporary page provides access to the Kadena FSS Civilian Personnel Office (CPO) job listings, which are updated every Thursday. It has been created to ensure reliable access to current vacancy announcements while our official website is down due to ongoing issues at headquarters.</h3></p> 
+
+  <div class="announcement">
+    <p> <h3>This temporary page provides access to the Kadena FSS Civilian Personnel Office (CPO) job listings, which are updated every Thursday. It has been created to ensure reliable access to current vacancy announcements while our official website is down due to ongoing issues at headquarters.</h3></p> 
       <p> 
+</div>
+  
         <h2> 14 August Weekly VA </h2>
         <ul> 
         <li><a href="Vacancy Announcements Currently Open as of 13 Aug 2025.pdf" target="_blank">14 August Weekly VA Postings </a></li> 
