--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
 
   <div class="announcement">
     <p> This temporary page provides access to the Kadena FSS Civilian Personnel Office (CPO) job listings, which are updated every Thursday. It has been created to ensure reliable access to current vacancy announcements while our official website is down due to ongoing issues at headquarters.</p> 
-      <p> 
+      <p>
+        <img src="Kadena FSS.jpg" alt="Italian Trulli">
+  
 </div>
+
   
         <h2> 14 August Weekly VA </h2>
         <ul> 
