--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <title> Civilian Personnel Section Weekly Job Listings </title>
   <h1> Civilian Personnel Section Weekly Job Listings </h1>
       <link rel="stylesheet" href="styles.css"> 
-
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Aboreto&display=swap" rel="stylesheet">
 </head>
 
 <body> 
