--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <p> This temporary page provides access to the Kadena FSS Civilian Personnel Office (CPO) job listings, which are updated every Thursday. It has been created to ensure reliable access to current vacancy announcements while our official website is down due to ongoing issues at headquarters.</p> 
       
-        <img src="FSS logo simple ver white.png" alt="Italian Trulli">
+        <img src="Untitled design.png" alt="Italian Trulli">
   
 </div>
         <h2> 14 August Weekly VA </h2>
