--- a/index.html
+++ b/index.html
@@ -21,19 +21,16 @@
 </div>
         <h2> 14 August Weekly VA </h2>
         <ul> 
-        <li><a href="Vacancy Announcements Currently Open as of 13 Aug 2025.pdf" target="_blank">14 August Weekly VA Postings </a></li> 
+       <li><a href="Vacancy Announcements Currently Open as of 13 Aug 2025.pdf" target="_blank">14 August Weekly VA Postings </a></li> 
        <li><a href="P-25-560-32 Property Dispo Clk- DLA- BWT 1-4 (t 1-5) (All MLC-IHA-MC Emp in Oki).pdf" target="_blank">P-25-560-32 Property Dispo Clk, DLA, BWT 1-4 (t 1-5) (All MLC-IHA-MC Emp in Oki)</a></li> 
-       <li><a href="P-25-596-30 (Amended) Child Dev Prog Tech- 18 FSS-FSYCN- BWT 1-4 (18 FSS-FSY Emp Only).pdf" target="_blank">P-25-596-30 (Amended) Child Dev Prog Tech, 18 FSS-FSYCN, BWT 1-4 (18 FSS-FSY Emp Only)</a></li> 
-       <li><a href="P-25-597-30 (Amended) Child Dev Prog Tech- 18 FSS-FSYCW- BWT 1-4 (18 FSS-FSY Emp Only).pdf" target="_blank">P-25-597-30 (Amended) Child Dev Prog Tech, 18 FSS-FSYCW, BWT 1-4 (18 FSS-FSY Emp Only)</a></li> 
        <li><a href="P-25-608-32 Maintenance Worker- 718 FSS- BWT 2-5 (Base-Wide only).pdf" target="_blank">P-25-608-32 Maintenance Worker, 718 FSS, BWT 2-5 (Base-wide)</a></li> 
        <li><a href="P-25-622-32 Guard- 18 SFS- BWT 3-1 (18 SFS Emp Only) (1).pdf" target="_blank">P-25-622-32 Guard, 18 SFS, BWT 3-1 (18 SFS Emp Only)</a></li> 
        <li><a href="P-25-626-32 Sales Checker- BWT-1-3 (LTE) DeCA FOS  (All MLC-IHA-MC Emp in Oki).pdf" target="_blank">P-25-626-32 Sales Checker, BWT-1-3, LTE, DeCA FOS  (All MLC-IHA-MC Emp in Oki)</a></li> 
-       <li><a href="P-25-591-31 Fabric & Leather Worker- 718 CES- BWT2-6 (All MLC-IHA-MC Emp in Oki).pdf" target="_blank">P-25-591-31 Fabric & Leather Worker, 718 CES, BWT2-6 (All MLC-IHA-MC Emp in Oki)</a></li>
-       <li><a href="P-25-599-31 Commissary Worker- DeCA-COU- BWT 2-3 (All MLC-IHA-MC Emp in Oki).pdf" target="_blank">P-25-599-31 Commissary Worker, DeCA (COU), BWT 2-3 (All MLC-IHA-MC Emp in Oki)</a></li>
-       <li><a href="P-25-605-31 Engineering Draftsman- 18CES- BWT 1-4 (18 CES-CEO Emp Only).pdf" target="_blank">P-25-605-31 Engineering Draftsman, 18CES, BWT 1-4 (CEO Only)</a></li>
-       <li><a href="P-25-609-31 Budget Technician- 18 CPTS FMA- BWT 1-5 (All MLC-IHA-MC Emp in Oki).pdf" target="_blank">P-25-609-31 Budget Tech, 18 CPTS FMA, BWT 1-5 (All MLC-IHA-MC Emp in Oki)</a></li>
-       <li><a href="P-25-612-31 Administrative Specialist- 718CES- BWT1-4 (LTE) (All MLC-IHA-MC Emp in Oki).pdf" target="_blank">P-25-612-31 Administrative Specialist, 718CES, BWT1-4 (LTE) (All MLC-IHA-MC Emp in Oki)</a></li>
-       <li><a href="P-25-615-31 Comsry Wkr-Forklift Opr- DeCA-KIN- BWT 2-4 (DeCA-Kinser Comsry Emp Only).pdf" target="_blank">P-25-615-31 Comsry Wkr-Forklift Opr, DeCA-KIN, BWT 2-4 (DeCA-Kinser Comsry Emp Only)</a></li> 
+       <li><a href="" target="_blank">P-25-572-33 Tel Ctrl Ofc Maint FA, 2-9, 18 CS (18 CS Emp Only)</a></li> 
+       <li><a href="" target="_blank">P-25-617-33 Library Clerk, 718 FSS, BWT 1-3 (All MLC-IHA-MC Emp in Oki)</a></li> 
+       <li><a href="" target="_blank">P-25-620-33 Comsry Wkr FA, 2-4, DeCA FOS (Base Wide Only)</a></li> 
+       <li><a href="" target="_blank">P-25-631-33 Carpenter, Finish, 18 CES, BWT 2-6 (Base Wide Only)</a></li> 
+       <li><a href="" target="_blank">P-25-634-33 Laundry-Dry Cleaning Presser 2-4, 78 FSS-Laundry (All MLC-IHA-MC Emp in Oki)</a></li> 
         </ul> 
       </p>
 
@@ -50,8 +47,6 @@
         <li><a href="OC-23-480 Revised - Boiler Plant Operator FA- FSVA BWT 2-7.pdf" target="_blank">OC-23-480 Revised - Boiler Plant Operator FA, FSVA BWT 2-7</a></li> 
         <li><a href="OC-24-651 Refrigeration and Air-Conditioning Mech FA- 718 CES-CELS3- BWT 2-8 (1).pdf" target="_blank">OC-24-651 Refrigeration and Air-Conditioning Mech FA, 718 CES-CELS3, BWT 2-8</a></li> 
         <li><a href="JA-24-686 Equipment Specialist- 718 FSS-FSVA- BWT 1-6.pdf.pdf" target="_blank">OC-24-686 Revised - Equipment Specialist, 718 FSS, BWT 1-6</a></li> 
-        <li><a href="OC-24-954 Cook Foreman A- 718 FSS- BWT 2-6.pdf" target="_blank">OC-24-954 Cook Foreman A, 718 FSS, BWT 2-6</a></li> 
-        <li><a href="OC-25-208 Safety Tech- 18WG-SE- BWT-1-5.pdf" target="_blank">OC-25-208 Safety Tech, 18WG-SE, BWT-1-5</a></li> 
         <li><a href="OC-25-236 Counter Attendant- 718 FSS- BWT 2-3 (LTE).pdf" target="_blank">OC-25-236 Counter Attendant, 718 FSS, BWT 2-3 (LTE)</a></li> 
         <li><a href="OC-25-250 IT Assist (Cus-Net)- 718 FSS- BWT 1-5 LTE 2Yrs.pdf" target="_blank">OC-25-250 IT Assist (Cus-Net), 718 FSS, BWT 1-5 LTE 2Yrs</a></li> 
         <li><a href="P-25-626-32 Sales Checker- BWT-1-3 (LTE) DeCA FOS  (All MLC-IHA-MC Emp in Oki).pdf" target="_blank">OC-25-325 Sales Checker, DeCA, Foster Commissary, BWT 1-3 (LTE)</a></li> 
