--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
         <img src="Untitled design.png" alt="Italian Trulli">
   
 </div>
-        <h2> 14 August Weekly VA </h2>
+        <h2> 20 August Weekly VA </h2>
         <ul> 
-       <li><a href="Vacancy Announcements Currently Open as of 13 Aug 2025.pdf" target="_blank">14 August Weekly VA Postings </a></li> 
+       <li><a href="Vacancy Announcements Currently Open as of 20 Aug 2025.pdf" target="_blank">20 August Weekly VA Postings </a></li> 
        <li><a href="P-25-560-32 Property Dispo Clk- DLA- BWT 1-4 (t 1-5) (All MLC-IHA-MC Emp in Oki).pdf" target="_blank">P-25-560-32 Property Dispo Clk, DLA, BWT 1-4 (t 1-5) (All MLC-IHA-MC Emp in Oki)</a></li> 
-       <li><a href="P-25-608-32 Maintenance Worker- 718 FSS- BWT 2-5 (Base-Wide only).pdf" target="_blank">P-25-608-32 Maintenance Worker, 718 FSS, BWT 2-5 (Base-wide)</a></li> 
-       <li><a href="P-25-622-32 Guard- 18 SFS- BWT 3-1 (18 SFS Emp Only) (1).pdf" target="_blank">P-25-622-32 Guard, 18 SFS, BWT 3-1 (18 SFS Emp Only)</a></li> 
-       <li><a href="P-25-626-32 Sales Checker- BWT-1-3 (LTE) DeCA FOS  (All MLC-IHA-MC Emp in Oki).pdf" target="_blank">P-25-626-32 Sales Checker, BWT-1-3, LTE, DeCA FOS  (All MLC-IHA-MC Emp in Oki)</a></li> 
-       <li><a href="" target="_blank">P-25-572-33 Tel Ctrl Ofc Maint FA, 2-9, 18 CS (18 CS Emp Only)</a></li> 
-       <li><a href="" target="_blank">P-25-617-33 Library Clerk, 718 FSS, BWT 1-3 (All MLC-IHA-MC Emp in Oki)</a></li> 
-       <li><a href="" target="_blank">P-25-620-33 Comsry Wkr FA, 2-4, DeCA FOS (Base Wide Only)</a></li> 
-       <li><a href="" target="_blank">P-25-631-33 Carpenter, Finish, 18 CES, BWT 2-6 (Base Wide Only)</a></li> 
-       <li><a href="" target="_blank">P-25-634-33 Laundry-Dry Cleaning Presser 2-4, 78 FSS-Laundry (All MLC-IHA-MC Emp in Oki)</a></li> 
+       <li><a href="P-25-608-32 Maintenance Worker- 718 FSS- BWT 2-5 (Base-Wide only) (1).pdf" target="_blank">P-25-608-32 Maintenance Worker, 718 FSS, BWT 2-5 (Base-wide)</a></li> 
+       <li><a href="P-25-622-32 Guard- 18 SFS- BWT 3-1 (18 SFS Emp Only).pdf" target="_blank">P-25-622-32 Guard, 18 SFS, BWT 3-1 (18 SFS Emp Only)</a></li> 
+       <li><a href="P-25-626-32 Sales Checker- BWT-1-3 (LTE) DeCA FOS  (All MLC-IHA-MC Emp in Oki) (1).pdf" target="_blank">P-25-626-32 Sales Checker, BWT-1-3, LTE, DeCA FOS  (All MLC-IHA-MC Emp in Oki)</a></li> 
+       <li><a href="P-25-572-33 Tel Ctrl Ofc Maint FA- 2-9- 18 CS (18 CS Emp Only).pdf" target="_blank">P-25-572-33 Tel Ctrl Ofc Maint FA, 2-9, 18 CS (18 CS Emp Only)</a></li> 
+       <li><a href="P-25-617-33 Library Clerk- 718 FSS- BWT 1-3 (All MLC-IHA-MC Emp in Oki).pdf" target="_blank">P-25-617-33 Library Clerk, 718 FSS, BWT 1-3 (All MLC-IHA-MC Emp in Oki)</a></li> 
+       <li><a href="P-25-620-33 Comsry Wkr FA- 2-4- DeCA FOS (Base Wide Only).pdf" target="_blank">P-25-620-33 Comsry Wkr FA, 2-4, DeCA FOS (Base Wide Only)</a></li> 
+       <li><a href="P-25-631-33 Carpenter- Finish- 18 CES- BWT 2-6 (Base Wide Only).pdf" target="_blank">P-25-631-33 Carpenter, Finish, 18 CES, BWT 2-6 (Base Wide Only)</a></li> 
+       <li><a href="P-25-634-33 Laundry-Dry Cleaning Presser 2-4- 78 FSS-Laundry (All MLC-IHA-MC Emp in Oki).pdf" target="_blank">P-25-634-33 Laundry-Dry Cleaning Presser 2-4, 78 FSS-Laundry (All MLC-IHA-MC Emp in Oki)</a></li> 
         </ul> 
       </p>
 
