--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
         <ul> 
         <li><a href="OC-23-480 Revised - Boiler Plant Operator FA- FSVA BWT 2-7.pdf" target="_blank">OC-23-480 Revised - Boiler Plant Operator FA, FSVA BWT 2-7</a></li> 
         <li><a href="OC-24-651 Refrigeration and Air-Conditioning Mech FA- 718 CES-CELS3- BWT 2-8 (1).pdf" target="_blank">OC-24-651 Refrigeration and Air-Conditioning Mech FA, 718 CES-CELS3, BWT 2-8</a></li> 
-        <li><a href="JA-24-686 Equipment Specialist- 718 FSS-FSVA- BWT 1-6.pdf.pdf" target="_blank">OC-24-686 Revised - Equipment Specialist, 718 FSS, BWT 1-6</a></li> 
+        <li><a href="OC-24-686 Revised - Equipment Specialist- 718 FSS- BWT 1-6 (1).pdf" target="_blank">OC-24-686 Revised - Equipment Specialist, 718 FSS, BWT 1-6</a></li> 
         <li><a href="OC-25-236 Counter Attendant- 718 FSS- BWT 2-3 (LTE).pdf" target="_blank">OC-25-236 Counter Attendant, 718 FSS, BWT 2-3 (LTE)</a></li> 
         <li><a href="OC-25-250 IT Assist (Cus-Net)- 718 FSS- BWT 1-5 LTE 2Yrs.pdf" target="_blank">OC-25-250 IT Assist (Cus-Net), 718 FSS, BWT 1-5 LTE 2Yrs</a></li> 
-        <li><a href="P-25-626-32 Sales Checker- BWT-1-3 (LTE) DeCA FOS  (All MLC-IHA-MC Emp in Oki).pdf" target="_blank">OC-25-325 Sales Checker, DeCA, Foster Commissary, BWT 1-3 (LTE)</a></li> 
+        <li><a href="OC-25-325 Sales Checker- DeCA- Foster Commissary- BWT 1-3 (LTE).pdf" target="_blank">OC-25-325 Sales Checker, DeCA, Foster Commissary, BWT 1-3 (LTE)</a></li> 
         <li><a href="OC-25-351 Engineer (Arch)- 718 CES- BWT 1-5 T1-7 (Developmental Position).pdf" target="_blank">OC-25-351 Engineer (Arch), 718 CES, BWT 1-5 T1-7 (Developmental Position)</a></li> 
         <li><a href="OC-25-352 Engineer (Mech)- 718 CES- BWT 1-5 T1-7 (Developmental Position) (1).pdf" target="_blank">OC-25-352 Engineer (Mech), 718 CES, BWT 1-5 T1-7 (Developmental Position)</a></li> 
         <li><a href="OC-CE-OH-1-24 PM Wkr-Hlp- 718 CES- BWT 2-4 (LTE) (1).pdf" target="_blank">OC-CE-OH-1-24 PM Wkr-Hlp, 718 CES, BWT 2-4 (LTE)</a></li> 
