--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <p> 
         <h2> Japan Wide </h2>
         <ul> 
-        <li><a href="" target="_blank">JA-23-480 Revised - Boiler Plant Operator Foreman A, 718 FSS-FSVA, BWT 2-7</a></li> 
+        <li><a href="JA-23-480 Revised - Boiler Plant Operator Foreman A, 718 FSS-FSVA,BWT 2-7.pdf" target="_blank">JA-23-480 Revised - Boiler Plant Operator Foreman A, 718 FSS-FSVA, BWT 2-7</a></li> 
         </ul> 
       </p>
       <p> 
