--- a/index.html
+++ b/index.html
@@ -19,22 +19,24 @@
         <img src="Untitled design.png" alt="Italian Trulli">
   
 </div>
-        <h2> 20 August Weekly VA </h2>
+        <h2> 27 August Weekly VA </h2>
         <ul> 
-       <li><a href="Vacancy Announcements Currently Open as of 20 Aug 2025.pdf" target="_blank">20 August Weekly VA Postings </a></li> 
-       <li><a href="P-25-560-32 Property Dispo Clk- DLA- BWT 1-4 (t 1-5) (All MLC-IHA-MC Emp in Oki).pdf" target="_blank">P-25-560-32 Property Dispo Clk, DLA, BWT 1-4 (t 1-5) (All MLC-IHA-MC Emp in Oki)</a></li> 
-       <li><a href="P-25-608-32 Maintenance Worker- 718 FSS- BWT 2-5 (Base-Wide only) (1).pdf" target="_blank">P-25-608-32 Maintenance Worker, 718 FSS, BWT 2-5 (Base-wide)</a></li> 
-       <li><a href="P-25-622-32 Guard- 18 SFS- BWT 3-1 (18 SFS Emp Only).pdf" target="_blank">P-25-622-32 Guard, 18 SFS, BWT 3-1 (18 SFS Emp Only)</a></li> 
-       <li><a href="P-25-626-32 Sales Checker- BWT-1-3 (LTE) DeCA FOS  (All MLC-IHA-MC Emp in Oki) (1).pdf" target="_blank">P-25-626-32 Sales Checker, BWT-1-3, LTE, DeCA FOS  (All MLC-IHA-MC Emp in Oki)</a></li> 
-       <li><a href="P-25-572-33 Tel Ctrl Ofc Maint FA- 2-9- 18 CS (18 CS Emp Only).pdf" target="_blank">P-25-572-33 Tel Ctrl Ofc Maint FA, 2-9, 18 CS (18 CS Emp Only)</a></li> 
-       <li><a href="P-25-617-33 Library Clerk- 718 FSS- BWT 1-3 (All MLC-IHA-MC Emp in Oki).pdf" target="_blank">P-25-617-33 Library Clerk, 718 FSS, BWT 1-3 (All MLC-IHA-MC Emp in Oki)</a></li> 
-       <li><a href="P-25-620-33 Comsry Wkr FA- 2-4- DeCA FOS (Base Wide Only).pdf" target="_blank">P-25-620-33 Comsry Wkr FA, 2-4, DeCA FOS (Base Wide Only)</a></li> 
-       <li><a href="P-25-631-33 Carpenter- Finish- 18 CES- BWT 2-6 (Base Wide Only).pdf" target="_blank">P-25-631-33 Carpenter, Finish, 18 CES, BWT 2-6 (Base Wide Only)</a></li> 
-       <li><a href="P-25-634-33 Laundry-Dry Cleaning Presser 2-4- 78 FSS-Laundry (All MLC-IHA-MC Emp in Oki).pdf" target="_blank">P-25-634-33 Laundry-Dry Cleaning Presser 2-4, 78 FSS-Laundry (All MLC-IHA-MC Emp in Oki)</a></li> 
-        </ul> 
-      </p>
+       <li><a href="Vacancy Announcements Currently Open as of 27 Aug 2025.pdf" target="_blank">27 August Weekly VA Postings </a></li> 
+       <li><a href="P-25-563-34 Commercial Artist- 18 FSS-Arts&Crafts- BWT 1-5 (All MLC-IHA-MC Emp in Oki).pdf" target="_blank">P-25-563-34 Commercial Artist, 18 FSS-Arts&Crafts, BWT 1-5 (All MLC-IHA-MC Emp in Oki)</a></li> 
+       <li><a href="P-25-598-34 Administrative Specialist- 718 CES-CEHSF- BWT 1-4 (All MLC-IHA-MC Emp in Oki).pdf" target="_blank">P-25-598-34 Administrative Specialist, 718 CES-CEHSF, BWT 1-4 (All MLC-IHA-MC Emp in Oki)</a></li> 
+       <li><a href="P-25-618-34 Sales Clerk- 18 FSS-Auto Hobby- BWT 1-3 (All MLC-IHA-MC Emp in Oki).pdf" target="_blank">P-25-618-34 Sales Clerk, 18 FSS-Auto Hobby, BWT 1-3 (All MLC-IHA-MC Emp in Oki)</a></li> 
+       <li><a href="P-25-644-34 Mess Attendant (Heavy)- 718 FSS-Food Service- BWT 2-3 (LTE) (All MLC-IHA-MC LTE Emp in Oki).pdf" target="_blank">P-25-623-34 Mess Attendant (Heavy), 718 FSS-Food Service, BWT 2-3 (LTE) (All MLC-IHA-MC LTE Emp in Oki)</a></li> 
+       <li><a href="P-25-624-34 Cook 718 FSS-Food Service- BWT 2-5 (All MLC-IHA-MC Emp in Oki).pdf" target="_blank">P-25-624-34 Cook 718 FSS-Food Service, BWT 2-5 (All MLC-IHA-MC Emp in Oki)</a></li> 
+       <li><a href="P-25-628-34 MWR Program Aid- 18 MSG-Okuma- BWT 1-3 (All MLC-IHA-MC Emp in Oki).pdf" target="_blank">P-25-628-34 MWR Program Aid, 18 MSG-Okuma, BWT 1-3 (All MLC-IHA-MC Emp in Oki)</a></li> 
+       <li><a href="P-25-632-34 PM Worker- 718 CES-CELS1- BWT 2-6 (CELS1 & CELS2 Emp Only).pdf" target="_blank">P-25-632-34 PM Worker, 718 CES-CELS1, BWT 2-6 (CELS1 & CELS2 Emp Only)</a></li> 
+       <li><a href="P-25-633-34 PM Worker- 718 CES-CELS3- BWT 2-6 (CELS3 Empl Only).pdf" target="_blank">P-25-633-34 PM Worker, 718 CES-CELS3, BWT 2-6 (CELS3 Empl Only)</a></li> 
+       <li><a href="P-25-635-34 Spotter- 718 FSS-Laundry- BWT 2-5 (All MLC-IHA-MC Emp in Oki).pdf" target="_blank">P-25-635-34 Spotter, 718 FSS-Laundry, BWT 2-5 (All MLC-IHA-MC Emp in Oki)</a></li> 
+       <li><a href="P-25-639-34 Laundry Receiver and Shipper- 718 FSS-Laundry- BWT 2-3 (All MLC-IHA-MC Emp in Oki).pdf" target="_blank">P-25-639-34 Laundry Receiver and Shipper, 718 FSS-Laundry, BWT 2-3 (All MLC-IHA-MC Emp in Oki)</a></li> 
+       <li><a href="P-25-641-34 Administrative Specialist 1-4- 18 MSG (18MSG Emp Only).pdf" target="_blank">P-25-641-34 Administrative Specialist 1-4, 18 MSG (18MSG Emp Only)</a></li> 
+       <li><a href="P-25-643-34 Accounting Technician- 18 FSS- BWT 1-5 (LTE) (Base Wide Only).pdf" target="_blank">P-25-643-34 Accounting Technician, 18 FSS, BWT 1-5 (LTE) (Base Wide Only)</a></li> 
+       <li><a href="P-25-644-34 Mess Attendant (Heavy)- 718 FSS-Food Service- BWT 2-3 (LTE) (All MLC-IHA-MC LTE Emp in Oki).pdf" target="_blank">P-25-644-34 Mess Attendant (Heavy), 718 FSS-Food Service, BWT 2-3 (LTE) (All MLC-IHA-MC LTE Emp in Oki)</a></li> 
 
-      <p> 
+   <p> 
         <h2> Japan Wide </h2>
         <ul> 
         <li><a href="JA-23-480 Revised - Boiler Plant Operator Foreman A, 718 FSS-FSVA,BWT 2-7.pdf" target="_blank">JA-23-480 Revised - Boiler Plant Operator Foreman A, 718 FSS-FSVA, BWT 2-7</a></li> 
@@ -51,13 +53,6 @@
         <li><a href="OC-25-325 Sales Checker- DeCA- Foster Commissary- BWT 1-3 (LTE).pdf" target="_blank">OC-25-325 Sales Checker, DeCA, Foster Commissary, BWT 1-3 (LTE)</a></li> 
         <li><a href="OC-25-351 Engineer (Arch)- 718 CES- BWT 1-5 T1-7 (Developmental Position).pdf" target="_blank">OC-25-351 Engineer (Arch), 718 CES, BWT 1-5 T1-7 (Developmental Position)</a></li> 
         <li><a href="OC-25-352 Engineer (Mech)- 718 CES- BWT 1-5 T1-7 (Developmental Position) (1).pdf" target="_blank">OC-25-352 Engineer (Mech), 718 CES, BWT 1-5 T1-7 (Developmental Position)</a></li> 
-        <li><a href="OC-CE-OH-1-24 PM Wkr-Hlp- 718 CES- BWT 2-4 (LTE) (1).pdf" target="_blank">OC-CE-OH-1-24 PM Wkr-Hlp, 718 CES, BWT 2-4 (LTE)</a></li> 
-        <li><a href="OC-CE-OH-2-24 OA Clerk- 718 CES- BWT 1-3 (LTE).pdf" target="_blank">OC-CE-OH-2-24 OA Clerk, 718 CES, BWT 1-3 (LTE)</a></li> 
-        <li><a href="OC-CE-OH-5-24 Admin Spec- 718 CES- BWT1-4 (LTE).pdf target="_blank">OC-CE-OH-5-24 Admin Spec, 718 CES, BWT1-4 (LTE)</a></li> 
-        <li><a href="OC-CE-OH-6-24 Stock Control Clk- 718 CES- BWT 1-3 (LTE) (1).pdf" target="_blank">OC-CE-OH-6-24 Stock Control Clk, 718 CES, BWT 1-3 (LTE)</a></li> 
-        <li><a href="OC-CE-OH-7-24 Husg Clk- 718 CES- BWT 1-4 (LTE).pdf" target="_blank">OC-CE-OH-7-24 Husg Clk, 718 CES, BWT 1-4 (LTE)</a></li> 
-        <li><a href="CE-OH-7C-24-22 Husg Clk- 718 CES- BWT 1-4 (LTE) (All MLC-IHA-MC- LT Empl in Oki).pdf" target="_blank">OC-CE-OH-7C-24 Husg Clk, 718 CES, BWT 1-4 (LTE)</a></li> 
-        <li><a href="OC-CE-OH-7F-24 Husg Clk- 718 CES- BWT 1-4 (LTE).pdf" target="_blank">OC-CE-OH-7F-24 Husg Clk, 718 CES, BWT 1-4 (LTE)</a></li> 
         <li><a href="OC-25-366-Revised Engineer (AS)- 718 CES- BWT 1-5 T1-7 (Developmental Position).pdf" target="_blank">OC-25-366-Revised Engineer (AS), 718 CES, BWT 1-5 T1-7 (Developmental Position)</a></li> 
         </ul> 
       </p>
