--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
         <li><a href="OC-25-366-Revised Engineer (AS)- 718 CES- BWT 1-5 T1-7 (Developmental Position).pdf" target="_blank">OC-25-366-Revised Engineer (AS), 718 CES, BWT 1-5 T1-7 (Developmental Position)</a></li> 
         </ul> 
       </p>
-  
+
+      <p> 
+      <h3> Please access our 1EJ and 1-1EJ forms here: </h3>
+        <li><a href="Kadena AB 1EJ.pdf" target="_blank">1EJ</a></li> 
+        <li><a href="Kadena AB 1-1EJ.pdf" target="_blank">1-1EJ</a></li> 
+      </p>
 </body>
 </html> 
