--- a/index.html
+++ b/index.html
@@ -12,29 +12,20 @@
     <h1> Civilian Personnel Section Weekly Job Listings </h1>
 
   <div class="announcement">
-      <title> 27 August Weekly VA </title>
+      <title> 3 September Weekly VA </title>
 
     <p> This temporary page provides access to the Kadena FSS Civilian Personnel Office (CPO) job listings, which are updated every Thursday. It has been created to ensure reliable access to current vacancy announcements while our official website is down due to ongoing issues at headquarters.</p> 
       
         <img src="Untitled design.png" alt="Italian Trulli">
   
 </div>
-        <h2> 27 August Weekly VA </h2>
+        <h2> 3 September Weekly VA </h2>
         <ul> 
-       <li><a href="Vacancy Announcements Currently Open as of 27 Aug 2025.pdf" target="_blank">27 August Weekly VA Postings </a></li> 
-       <li><a href="P-25-563-34 Commercial Artist- 18 FSS-Arts&Crafts- BWT 1-5 (All MLC-IHA-MC Emp in Oki).pdf" target="_blank">P-25-563-34 Commercial Artist, 18 FSS-Arts&Crafts, BWT 1-5 (All MLC-IHA-MC Emp in Oki)</a></li> 
-       <li><a href="P-25-598-34 Administrative Specialist- 718 CES-CEHSF- BWT 1-4 (All MLC-IHA-MC Emp in Oki).pdf" target="_blank">P-25-598-34 Administrative Specialist, 718 CES-CEHSF, BWT 1-4 (All MLC-IHA-MC Emp in Oki)</a></li> 
-       <li><a href="P-25-618-34 Sales Clerk- 18 FSS-Auto Hobby- BWT 1-3 (All MLC-IHA-MC Emp in Oki).pdf" target="_blank">P-25-618-34 Sales Clerk, 18 FSS-Auto Hobby, BWT 1-3 (All MLC-IHA-MC Emp in Oki)</a></li> 
-       <li><a href="P-25-644-34 Mess Attendant (Heavy)- 718 FSS-Food Service- BWT 2-3 (LTE) (All MLC-IHA-MC LTE Emp in Oki).pdf" target="_blank">P-25-623-34 Mess Attendant (Heavy), 718 FSS-Food Service, BWT 2-3 (LTE) (All MLC-IHA-MC LTE Emp in Oki)</a></li> 
-       <li><a href="P-25-624-34 Cook 718 FSS-Food Service- BWT 2-5 (All MLC-IHA-MC Emp in Oki).pdf" target="_blank">P-25-624-34 Cook 718 FSS-Food Service, BWT 2-5 (All MLC-IHA-MC Emp in Oki)</a></li> 
-       <li><a href="P-25-628-34 MWR Program Aid- 18 MSG-Okuma- BWT 1-3 (All MLC-IHA-MC Emp in Oki).pdf" target="_blank">P-25-628-34 MWR Program Aid, 18 MSG-Okuma, BWT 1-3 (All MLC-IHA-MC Emp in Oki)</a></li> 
-       <li><a href="P-25-632-34 PM Worker- 718 CES-CELS1- BWT 2-6 (CELS1 & CELS2 Emp Only).pdf" target="_blank">P-25-632-34 PM Worker, 718 CES-CELS1, BWT 2-6 (CELS1 & CELS2 Emp Only)</a></li> 
-       <li><a href="P-25-633-34 PM Worker- 718 CES-CELS3- BWT 2-6 (CELS3 Empl Only).pdf" target="_blank">P-25-633-34 PM Worker, 718 CES-CELS3, BWT 2-6 (CELS3 Empl Only)</a></li> 
-       <li><a href="P-25-635-34 Spotter- 718 FSS-Laundry- BWT 2-5 (All MLC-IHA-MC Emp in Oki).pdf" target="_blank">P-25-635-34 Spotter, 718 FSS-Laundry, BWT 2-5 (All MLC-IHA-MC Emp in Oki)</a></li> 
-       <li><a href="P-25-639-34 Laundry Receiver and Shipper- 718 FSS-Laundry- BWT 2-3 (All MLC-IHA-MC Emp in Oki).pdf" target="_blank">P-25-639-34 Laundry Receiver and Shipper, 718 FSS-Laundry, BWT 2-3 (All MLC-IHA-MC Emp in Oki)</a></li> 
-       <li><a href="P-25-641-34 Administrative Specialist 1-4- 18 MSG (18MSG Emp Only).pdf" target="_blank">P-25-641-34 Administrative Specialist 1-4, 18 MSG (18MSG Emp Only)</a></li> 
-       <li><a href="P-25-643-34 Accounting Technician- 18 FSS- BWT 1-5 (LTE) (Base Wide Only).pdf" target="_blank">P-25-643-34 Accounting Technician, 18 FSS, BWT 1-5 (LTE) (Base Wide Only)</a></li> 
-       <li><a href="P-25-644-34 Mess Attendant (Heavy)- 718 FSS-Food Service- BWT 2-3 (LTE) (All MLC-IHA-MC LTE Emp in Oki).pdf" target="_blank">P-25-644-34 Mess Attendant (Heavy), 718 FSS-Food Service, BWT 2-3 (LTE) (All MLC-IHA-MC LTE Emp in Oki)</a></li> 
+       <li><a href="Vacancy Announcements Currently Open as of 3 Sep 2025.pdf" target="_blank"> 3 September Weekly VA Postings </a></li> 
+       <li><a href="P-25-544-35 Warehouseman FA- 718 CES-CEHSFM- BWT 2-5 (All MLC-IHA-MC Emp in Oki).pdf" target="_blank">P-25-544-35 Warehouseman FA, 718 CES-CEHSFM, BWT 2-5 (All MLC-IHA-MC Emp in Oki)</a></li>
+       <li><a href="P-25-649-35 Fire Fighter (Aircraft)- 18 CES- BWT 3-3 (All MLC-IHA-MC Emp in Oki).pdf" target="_blank">P-25-649-35 Fire Fighter (Aircraft), 18 CES, BWT 3-3 (All MLC-IHA-MC Emp in Oki)</a></li> 
+       <li><a href="P-25-657-35 Commissary Worker- DeCA-KIN- BWT 2-3 (DeCA-Kinser Comsry Emp Only).pdf" target="_blank">P-25-657-35 Commissary Worker, DeCA-KIN, BWT 2-3 (DeCA-Kinser Comsry Emp Only)</a></li> 
+       <li><a href="P-25-670-35 Accounting Technician- DeCA-Kadena- BWT 1-4 (All DeCA Comsry Emp Only).pdf" target="_blank">P-25-670-35 Accounting Technician, DeCA-Kadena, BWT 1-4 (All DeCA Comsry Emp Only)</a></li> 
 
    
         <h2> Japan Wide </h2>
