--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
 <body> 
     <h1> Civilian Personnel Section Weekly Job Listings </h1>
+      <h2> Please check https://kadenafss.com/civilian-personnel-section/ for job listings</h2>
 
-  <div class="announcement">
+<!--  <div class="announcement">
       <title> 3 September Weekly VA </title>
 
     <p> This temporary page provides access to the Kadena FSS Civilian Personnel Office (CPO) job listings, which are updated every Thursday. It has been created to ensure reliable access to current vacancy announcements while our official website is down due to ongoing issues at headquarters.</p> 
@@ -51,6 +52,6 @@
       <h3> Please access our 1EJ and 1-1EJ forms here: </h3>
         <li><a href="Kadena AB 1EJ.pdf" target="_blank">1EJ</a></li> 
         <li><a href="Kadena AB 1-1EJ.pdf" target="_blank">1-1EJ</a></li> 
-      </p>
+      </p>-->
 </body>
 </html> 
